2012-03-22  Robert Kroeger  <rjkroege@chromium.org>

        [chromium] Halt in progress flings on receipt of key events
        https://bugs.webkit.org/show_bug.cgi?id=81988

        Reviewed by Adrienne Walker.

        * src/WebCompositorInputHandlerImpl.cpp:
        (WebKit::WebCompositorInputHandlerImpl::handleInputEventInternal):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::keyEvent):

2012-03-22  Dana Jansens  <danakj@chromium.org>

        [chromium] Skip frames when checkerboarding an animation
        https://bugs.webkit.org/show_bug.cgi?id=81716

        Reviewed by Adrienne Walker.

        * tests/CCLayerTreeHostImplTest.cpp:
        (WebKitTests::TEST_F):
        * tests/CCSchedulerStateMachineTest.cpp:
        (WebCore::TEST):
        (WebCore):
        * tests/CCSchedulerTest.cpp:
        (WebKitTests::FakeCCSchedulerClient::reset):
        (WebKitTests::FakeCCSchedulerClient::numDraws):
        (WebKitTests::FakeCCSchedulerClient::scheduledActionDrawAndSwapIfPossible):
        (FakeCCSchedulerClient):
        (WebKitTests::FakeCCSchedulerClient::scheduledActionDrawAndSwapForced):
        (WebKitTests::FakeCCSchedulerClient::setDrawSuccess):
        (WebKitTests::TEST):
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::SchedulerClientThatSetNeedsDrawInsideDraw):
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::scheduledActionDrawAndSwapIfPossible):
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::scheduledActionDrawAndSwapForced):
        (SchedulerClientThatSetNeedsDrawInsideDraw):
        (WebKitTests):
        (WebKitTests::SchedulerClientThatSetNeedsCommitInsideDraw::SchedulerClientThatSetNeedsCommitInsideDraw):
        (WebKitTests::SchedulerClientThatSetNeedsCommitInsideDraw::scheduledActionDrawAndSwapIfPossible):
        (WebKitTests::SchedulerClientThatSetNeedsCommitInsideDraw::scheduledActionDrawAndSwapForced):
        (SchedulerClientThatSetNeedsCommitInsideDraw):